Make files ready for template

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site info
-domain: www.singulardream.com
-title: Singular Dream
+domain: www.jekyllstarter.com
+title: Jekyll Starter
 author: Chris Cooper
 email: chris@quixotic-chris.com
 
